end of day upload

--- a/cockroaches.html
+++ b/cockroaches.html
@@ -63,6 +63,10 @@
          <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
+         <img src="images/roach2.jpg" alt="roach1" class="roach1">
+         <img src="images/roach1.jpg" alt="roach2" class="roach2">
+         <img src="images/roaches1.jpg" alt="roach3" class="roach3">
+         <img src="images/roach3.jpg" alt="roach4" class="roach4">
      </div>
      <footer>
         <div class="footer-center">
