--- a/pigeon.html
+++ b/pigeon.html
@@ -63,32 +63,88 @@
          <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
+         <img src="images/pige1.jpg" alt="pigeon1" class="pigeon1">
+         <img src="images/pig.jpg" alt="pigeon2" class="pigeon2">
+         <img src="images/pige2.jpg" alt="pigeon3" class="pigeon3">
+         <img src="images/pige.jpg" alt="pigeon4" class="pigeon4">
      </div>
      <footer>
-        <div class="footer-center">
+        <div class="footer-center" id="tm-web">
+            <a href="https://bpca.org.uk/">
             <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
+            <p id="tm-link">BPCA</p></a>
+            <a href="https://www.rsph.org.uk/">
             <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
+            <p id="tm-link">RSPH</p></a>
+            <a href="https://www.trustmark.org.uk/homeowner">
             <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
+            <p id="tm-link">TrustMark </p></a>
+            <a href="https://www.medway.gov.uk/">
             <img class="trustmark" src="images/Medway_Council.png" alt="Medway-council">
+            <p id="tm-link">Medway Council</p></a>
+        </div>
+        <div class="useful-links">
+            <a id="nav-link1" href="index.html">• Home</a>
+            <a id="nav-link1" href="about.html">• About</a>
+            <a id="nav-link1" href="services.html">• Services</a>
+            <a id="nav-link1" href="contact-us.html">• Contact Us</a>
+            <a id="nav-link1" href="faq.html">• FAQ</a>   
+        </div>
+        <div class="useful-links1">
+            <p class="link-header">
+                Useful Links
+            </p>
+            <a id="nav-link2" href="Rats.html">• Rats</a>
+            <a id="nav-link2" href="Mice.html">• Mice</a>
+            <a id="nav-link2" href="pigeon.html">• Bird Control</a>
+            <a id="nav-link2" href="fleas.html">• Fleas</a>
+            <a id="nav-link2" href="other.html">• Other Services</a> 
+        </div>
+        <div>
             <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
         </div>
+        <div class="medway-address">
+            <a href="index.html">
+            <img id="medway-logo1" src="images/Medway-Rev.png" alt="Medway Norse Logo">
+            </a>
+            <p class="contact-info">
+                <i class="fa fa-map-marker" id="pier-address" aria-hidden="true" style="color: #fff;"></i>
+                <a class="white-link" id="pier-address" style="position:relative; z-index:10"
+                 href="https://www.google.com/maps/place/Pier+Approach+Rd,+Gillingham+ME7+1RX/@51.3981421,0.55482,692m/data=!3m2!1e3!4b1!4m6!3m5!1s0x47d8cd88dac934e5:0x397759589bfd962!8m2!3d51.3981421!4d0.55482!16s%2Fg%2F11y8wbdbtc?entry=ttu&g_ep=EgoyMDI1MDExNC4wIKXMDSoASAFQAw%3D%3D">
+                    Pier Approach Rd<br>
+    Gillingham<br>
+    Kent<br>
+    ME7 1RT<br><br></a>
+    <i class="fa fa-phone" id="medway-phone" aria-hidden="true" style="color: #fff;"></i><a style="position:relative; z-index:10" class="white-link" id="medway-phone" href="tel:01634283210"> 01634 283210</a><br><br>
+            </p>
+            </div>    
+            <div class="medway-address1">
+                <p class="contact-info">
+                    <br><i class="fa fa-map-marker" id="stoney-lane" aria-hidden="true" style="color: #fff;"></i>
+                    <a class="white-link" id="stoney-lane" href="https://www.google.com/maps/place/Stoney+Ln,+Rochester/@51.354513,0.4923677,693m/data=!3m2!1e3!4b1!4m6!3m5!1s0x47d8ccc8ed778095:0xee8e2dda1ee79bcc!8m2!3d51.354513!4d0.4949426!16s%2Fg%2F1tv23dtr?entry=ttu&g_ep=EgoyMDI1MDExNC4wIKXMDSoASAFQAw%3D%3D">
+                        Rochester Trade Park<br> Rochester Airport Industrial Estate<br> Maidstone Rd <br>
+                        Chatham<br>
+        Kent<br>
+        ME1 3QY<br><br></a>
+        <i class="fa fa-envelope" id="medway-email" aria-hidden="true" style="color: #fff;"></i><a id="medway-email" class="white-link" href="mailto:medwaynorse@ncsgrp.co.uk"> medwaynorse@ncsgrp.co.uk</a><br><br>
+               </p>
+                </div>  
         <div class="norse-address">
         <a href="https://norsegroup.co.uk/">
         <img id="norse-logo" src="images/Norse_Group_logo.png" alt="Norse Group Logo">
         </a>
         <p class="contact-info">
-            <i class="fa fa-map-marker" aria-hidden="true"></i>
-            <a class="white-link" href="https://www.google.co.uk/maps/place/280+Fifers+Ln,+Norwich+NR6+6EQ/@52.6664906,1.2735206,17z/data=!3m1!4b1!4m6!3m5!1s0x47d9e18e34b8b6bb:0xfb6477561fcc68b3!8m2!3d52.6664906!4d1.2760955!16s%2Fg%2F11csnwvg6g?entry=ttu&g_ep=EgoyMDI1MDExMC4wIKXMDSoASAFQAw%3D%3D">
+            <i class="fa fa-map-marker" id="norse-address" aria-hidden="true"></i>
+            <a class="white-link" id="norse-address" href="https://www.google.co.uk/maps/place/280+Fifers+Ln,+Norwich+NR6+6EQ/@52.6664906,1.2735206,17z/data=!3m1!4b1!4m6!3m5!1s0x47d9e18e34b8b6bb:0xfb6477561fcc68b3!8m2!3d52.6664906!4d1.2760955!16s%2Fg%2F11csnwvg6g?entry=ttu&g_ep=EgoyMDI1MDExMC4wIKXMDSoASAFQAw%3D%3D">
                  280 Fifers Lane<br>
 Norwich<br>
 Norfolk<br>
 NR6 6EQ<br><br></a>
-<i class="fa fa-phone" aria-hidden="true"></i><a class="white-link" href="tel:01603894100"> 01603 894100</a><br><br>
-<i class="fa fa-envelope" aria-hidden="true"></i><a class="white-link" href="mailto:info@norsegroup.co.uk"> info@norsegroup.co.uk</a><br><br>
+<i class="fa fa-phone" id="norse-address" aria-hidden="true"></i><a class="white-link" id="norse-address" href="tel:01603894100"> 01603 894100</a><br><br>
+<i class="fa fa-envelope" id="norse-address" aria-hidden="true"></i><a class="white-link" id="norse-address" href="mailto:info@norsegroup.co.uk"> info@norsegroup.co.uk</a><br><br>
         </p>
         </div>    
     </footer>
-
     <!--       cookies     --> 
     <div id="consentBox">
         <img src="images/Norse_Group_logo.png" alt="Norse Group Logo">
