--- a/Ants.html
+++ b/Ants.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medway Norse Pest Control - Home</title>
-        <!-- Default (base) CSS -->
-         <link rel="stylesheet" href="css/styles-mobile.css">
+<!-- Default (base) CSS for XXS screens (under 375px) -->
+<link rel="stylesheet" href="css/styles-xxs.css">
 
-        <!-- For screens wider than 768px (Tablet & larger devices) -->
-         <link rel="stylesheet" href="css/styles-tablet.css" media="(min-width: 768px)">
-    
-        <!-- For screens wider than 1024px (Desktop & larger devices) -->
-        <link rel="stylesheet" href="css/styles.css" media="(min-width: 1024px)">
+<!-- For screens between 375px and 400px (Extra Small screens) -->
+<link rel="stylesheet" href="css/styles-xs.css" media="(min-width: 375px) and (max-width: 400px)">
+
+<!-- For screens between 400px and 768px (Mobile screens) -->
+<link rel="stylesheet" href="css/styles-mobile.css" media="(min-width: 400px) and (max-width: 768px)">
+
+<!-- For screens wider than 768px (Tablet & larger devices) -->
+<link rel="stylesheet" href="css/styles-tablet.css" media="(min-width: 768px)">
+
+<!-- For screens wider than 1024px (Desktop & larger devices) -->
+<link rel="stylesheet" href="css/styles.css" media="(min-width: 1024px)">
+
+<!-- For screens wider than 1200px (Extra Large screens) -->
+<link rel="stylesheet" href="css/styles-xl.css" media="(min-width: 1200px)">
+
+<!-- For screens wider than 1400px (Extra Extra Large screens) -->
+<link rel="stylesheet" href="css/styles-xxl.css" media="(min-width: 1400px)">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico?">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -67,7 +80,7 @@
     </div><br><br>
     <div class="center-container">
         <!-- contact tile-->
-        <div class="contact-tile">
+        <div class="contact-tile tablet">
          <p  id="contact-title" class="contact-item" style="font-size: 1.5em; font-weight: 600;" >
                  Contact Us Now!</p><br>
             <a id="l" href="mailto:pestcontrol@ncsgrp.co.uk" class="contact-item">📧 PestControl@ncsgrp.co.uk</a><br><br>
