--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 style="font-size: 1.5em;"><b>Welcome to Medway Norse Pest Control</b></h2>
     </div>
     <div class="container main">
-        <p style="font-size: 1.2em;">Medway Norse Pest Control: Your council approved pest control partner for pest free living and working, local expertise you can trust.</p><br><br>
+        <p class="tag-line" style="font-size: 1.2em;">Medway Norse Pest Control: Your council approved pest control partner for pest free living and working, local expertise you can trust.</p><br><br>
     </div>
     <div>
         <picture>
@@ -70,6 +70,8 @@
         <p style="font-size: 1.4em;"><b>Why Choose Medway Norse Pest Control?</p><br><br>
 </div>
             <div class="trstmks">
+                <img class="abt-us-img" src="images/Veritas.jpg" alt="Norse-Group">
+                <img class="abt-us-img" src="images/wildlife.jpg" alt="Medway-council">
                 <img class="abt-us-img" src="images/Norse_Group_logo_optimized.png" alt="Norse-Group">
                 <img class="abt-us-img" src="images/Medway_Council-rgb.png" alt="Medway-council">
                 <img class="abt-us-img" src="images/BPCA-member-logo-rgb_225x225.jpg" alt="BPCA-member-logo">
@@ -213,7 +215,7 @@
             <header id="consentHeader">
                 Cookies: The choice is yours
             </header>
-            <p>
+            <p class="cookies">
                 We use cookies to make our site work well
                 for you and so we can continually improve it.
                 <br>The cookies that are necessary to 
