--- a/services.html
+++ b/services.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medway Norse Pest Control - Home</title>
-        <!-- Default (base) CSS -->
-         <link rel="stylesheet" href="css/styles-mobile.css">
+<!-- Default (base) CSS for XXS screens (under 375px) -->
+<link rel="stylesheet" href="css/styles-xxs.css">
 
-        <!-- For screens wider than 768px (Tablet & larger devices) -->
-         <link rel="stylesheet" href="css/styles-tablet.css" media="(min-width: 768px)">
-    
-        <!-- For screens wider than 1024px (Desktop & larger devices) -->
-        <link rel="stylesheet" href="css/styles.css" media="(min-width: 1024px)">
+<!-- For screens between 375px and 400px (Extra Small screens) -->
+<link rel="stylesheet" href="css/styles-xs.css" media="(min-width: 375px) and (max-width: 400px)">
+
+<!-- For screens between 400px and 768px (Mobile screens) -->
+<link rel="stylesheet" href="css/styles-mobile.css" media="(min-width: 400px) and (max-width: 768px)">
+
+<!-- For screens wider than 768px (Tablet & larger devices) -->
+<link rel="stylesheet" href="css/styles-tablet.css" media="(min-width: 768px)">
+
+<!-- For screens wider than 1024px (Desktop & larger devices) -->
+<link rel="stylesheet" href="css/styles.css" media="(min-width: 1024px)">
+
+<!-- For screens wider than 1200px (Extra Large screens) -->
+<link rel="stylesheet" href="css/styles-xl.css" media="(min-width: 1200px)">
+
+<!-- For screens wider than 1400px (Extra Extra Large screens) -->
+<link rel="stylesheet" href="css/styles-xxl.css" media="(min-width: 1400px)">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico?">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -61,6 +74,7 @@
         <a href="silverfish.html" class="tile" style="background-image: url('images/Silverfishv2.jpg');">Silverfish</a>
         <a href="moths.html" class="tile" style="background-image: url('images/Moths.jpg');">Moths</a>
         <a href="wasps.html" class="tile" style="background-image: url('images/Wasps.jpg');">Wasps</a>
+        <a href="moles.html" class="tile" style="background-image: url('images/Mole.jpg');">Moles</a>
         <a href="other.html" class="tile" style="background-image: url('images/pest.jpg');">Other</a>
     </div>
       </div>
