--- a/contact-us.html
+++ b/contact-us.html
@@ -58,8 +58,8 @@
     </div>
 <!--     Contact Form    -->
     <div class="container" id="contact-form">
-        <form action="https://formsubmit.co/tim.discipline@ncsgrp.co.uk" method="POST" autocomplete="on">
-            <input type="hidden" name="_cc" value="tdiscipline@gmail.com">
+        <form action="https://formsubmit.co/pest.control@ncsgrp.co.uk" method="POST" autocomplete="on">
+            <input type="hidden" name="_cc" value="phil.hockley@ncsgrp.co.uk">
       
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" placeholder=" Enter Your full name.." required>
